Commented out env section because it caused issues

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -70,8 +70,8 @@ font:
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
 # set by alacritty itself.
-env:
-  TERM: alacritty
+#env:
+  #TERM: alacritty
 
 ###############################################################################
 # Window
