Reduced auto-lock time

--- a/keepassxc/keepassxc.ini
+++ b/keepassxc/keepassxc.ini
@@ -87,8 +87,8 @@ Punctuation=true
 Quotes=true
 SpecialChars=true
 Type=0
-WordCount=7
-WordSeparator=-
+WordCount=8
+WordSeparator=" "
 
 [SSHAgent]
 Enabled=true
@@ -96,4 +96,4 @@ Enabled=true
 [Security]
 IconDownloadFallback=true
 LockDatabaseIdle=true
-LockDatabaseIdleSeconds=1800
+LockDatabaseIdleSeconds=600
