--- a/i3status/config
+++ b/i3status/config
@@ -8,54 +8,69 @@
 
 general {
   colors = true
-  interval = 5
+  interval = 1
 }
 
 order += "volume master"
 order += "wireless _first_"
 order += "ethernet _first_"
 order += "battery all"
+order += "cpu_usage"
+order += "memory"
 order += "disk /"
-order += "load"
-#order += "memory"
 order += "tztime local"
 
 volume master {
-  format = "♪: %volume"
-  format_muted = "♪: muted (%volume)"
+  format = "%volume"
+  format_muted = "(%volume)"
   device = "default"
   mixer = "Master"
   mixer_idx = 0
 }
 
 wireless _first_ {
-  format_up = "📡: (%quality at %essid) %ip"
-  format_down = "📡: down"
+  format_up = "直 (%quality at %essid, %bitrate/%frequency) %ip"
+  format_down = "睊"
 }
 
 ethernet _first_ {
-  format_up = "E: %ip (%speed)"
-  format_down = "E: down"
+  format_up = " %ip (%speed)"
+  format_down = ""
 }
 
 battery all {
-  format = "%status %percentage %remaining"
+  format = "%status %percentage (%remaining)"
+  format_down = "No bat"
+  status_chr = ""
+  status_full = ""
+  status_bat = ""
+  status_unk = ""
+  low_threshold = "25"
+  threshold_type = "percentage"
   last_full_capacity = true
 }
 
+cpu_usage {
+  format = "%usage"
+  degraded_threshold = "50"
+  #format_above_degraded_threshold = "%usage"
+  max_threshold = "75"
+  #format_above_threshold = "%usage"
+}
+
+memory {
+  format = "RAM usage: %used (%percentage_used)"
+  threshold_degraded = "50%"
+  threshold_critical = "25%"
+  #format_degraded = "RAM usage: %used (%percentage_used)"
+}
+
 disk "/" {
-  format = "💽: %used/%total"
+  format = "%used/%total (%avail avail)"
+  low_threshold = "10"
+  threshold_type = "percentage_avail"
+  #format_below_threshold = "%used/%total (%avail avail)"
 }
-
-load {
-  format = "💭: %1min"
-}
-
-#memory {
-#  format = ": %used/%total"
-#  threshold_degraded = "1G"
-#  format_degraded = "MEMORY < %available"
-#}
 
 tztime local {
   format = "%Y-%m-%d %H:%M:%S"
