--- a/i3status/config
+++ b/i3status/config
@@ -12,6 +12,7 @@ general {
 }
 
 order += "volume master"
+order += "path_exists notif_on"
 order += "wireless _first_"
 order += "ethernet _first_"
 order += "battery all"
@@ -26,6 +27,10 @@ volume master {
   device = "default"
   mixer = "Master"
   mixer_idx = 0
+}
+
+path_exists notif_on {
+  path = "/home/wayne/.config/dunst/is_on"
 }
 
 wireless _first_ {
