--- a/i3status/config
+++ b/i3status/config
@@ -7,6 +7,7 @@
 # If the above line is not correctly displayed, fix your editor first!
 
 general {
+  output_format = "i3bar"
   colors = true
   interval = 1
 }
@@ -17,13 +18,14 @@ order += "wireless _first_"
 order += "ethernet _first_"
 order += "battery all"
 order += "cpu_usage"
+order += "load"
 order += "memory"
 order += "disk /"
 order += "tztime local"
 
 volume master {
-  format = "%volume"
-  format_muted = "(%volume)"
+  format = " %volume"
+  format_muted = "󰝟 (%volume)"
   device = "default"
   mixer = "Master"
   mixer_idx = 0
@@ -31,52 +33,62 @@ volume master {
 
 path_exists notif_on {
   path = "/home/wayne/.config/dunst/is_on"
+  format_down = " 󰂛 "
+  format = " 󰂚 "
 }
 
 wireless _first_ {
-  format_up = "直 (%quality at %essid, %bitrate/%frequency) %ip"
-  format_down = "睊"
+  format_up = " 󰖩 %ip (%quality at %essid, %bitrate/%frequency)"
+  format_down = " 󰖪 "
 }
 
 ethernet _first_ {
-  format_up = " %ip (%speed)"
-  format_down = ""
+  format_up = " 󰈁 %ip (%speed)"
+  format_down = " 󰈂 "
 }
 
 battery all {
   format = "%status %percentage (%remaining)"
-  format_down = "No bat"
-  status_chr = ""
-  status_full = ""
-  status_bat = ""
-  status_unk = ""
+  format_down = " 󱉝 "
+  status_chr = " 󰂄 "
+  status_full = " 󱈑 "
+  status_bat = " 󰁹 "
+  status_unk = " 󰂃 "
   low_threshold = "25"
   threshold_type = "percentage"
-  last_full_capacity = true
+  integer_battery_capacity = true
+  last_full_capacity = false
+  hide_seconds = false
 }
 
 cpu_usage {
-  format = "%usage"
-  degraded_threshold = "50"
-  #format_above_degraded_threshold = "%usage"
+  format = "  %usage"
+  degraded_threshold = "25"
   max_threshold = "75"
-  #format_above_threshold = "%usage"
+  separator = false
+}
+
+# TODO: Add temperature! Figure out hardware paths.
+
+load {
+  format = " 󰔟 %1min/1m"
+  max_threshold = "5"
+  format_above_threshold = " 󰔟 %1min/1m;%5min/5m;%15min/15m"
 }
 
 memory {
-  format = "RAM usage: %used (%percentage_used)"
+  format = "RAM: %used / %total"
   threshold_degraded = "50%"
   threshold_critical = "25%"
-  #format_degraded = "RAM usage: %used (%percentage_used)"
 }
 
 disk "/" {
-  format = "%used/%total (%avail avail)"
-  low_threshold = "10"
+  format = " 󰋊 %used / %total"
+  prefix_type = "binary"
+  low_threshold = "15"
   threshold_type = "percentage_avail"
-  #format_below_threshold = "%used/%total (%avail avail)"
 }
 
 tztime local {
-  format = "%Y-%m-%d %H:%M:%S"
+  format = "%Y-%m-%dT%H:%M:%S"
 }
