Rework i3 config to use include statements

--- a/i3/conf.d/keybinds.conf
+++ b/i3/conf.d/keybinds.conf
@@ -77,9 +77,9 @@ bindsym $mod+Shift+Ctrl+8 move container to workspace $ws18
 bindsym $mod+Shift+Ctrl+9 move container to workspace $ws19
 bindsym $mod+Shift+Ctrl+0 move container to workspace $ws20
 # reload the configuration file
-bindsym $mod+Shift+c  exec --no-startup-id i3_config_merge.sh && i3-msg reload
+bindsym $mod+Shift+c  reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r  exec --no-startup-id i3_config_merge.sh && i3-msg restart
+bindsym $mod+Shift+r  restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e  exec "i3-nagbar -t warning -m 'You pressed the exit \
 shortcut. Do you really want to exit i3? This will end your X session.' -b \
@@ -89,7 +89,7 @@ bindsym $mod+x mode "$mode_power"
 # start dmenu (a program launcher)
 bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 # Manual managment of external displays
-bindsym $mod+Shift+d mode "$mode_mon_sec"
+bindsym $mod+Shift+d mode "$mode_mon2"
 # Move workspace to different display
 bindsym $mod+m mode "$mode_move_workspace"
 # Change wallpaper
@@ -114,5 +114,3 @@ bindsym $mod+n exec --no-startup-id dunstctl set-paused toggle \
   && dunst_status.sh
 # File manager
 bindsym $mod+slash exec --no-startup-id thunar
-
-
