--- a/i3/conf.d/variables_modes.conf
+++ b/i3/conf.d/variables_modes.conf
@@ -12,26 +12,26 @@ set $mod Mod4
 floating_modifier $mod
 
 # Workspace names
-set $ws1    "01:"
-set $ws2    "02:"
-set $ws3    "03:"
-set $ws4    "04:"
-set $ws5    "05:"
-set $ws6    "06:"
-set $ws7    "07:"
-set $ws8    "08:"
-set $ws9    "09:"
-set $ws10   "10:"
+set $ws1    "01"
+set $ws2    "02"
+set $ws3    "03"
+set $ws4    "04"
+set $ws5    "05"
+set $ws6    "06"
+set $ws7    "07"
+set $ws8    "08"
+set $ws9    "09"
+set $ws10   "10"
 set $ws11   "11:"
 set $ws12   "12:󰝚"
 set $ws13   "13:󰍡"
-set $ws14   "14:󰇮"
-set $ws15   "15:"
-set $ws16   "16:"
-set $ws17   "17:"
-set $ws18   "18:"
-set $ws19   "19:"
-set $ws20   "20:"
+set $ws14   "14"
+set $ws15   "15"
+set $ws16   "16"
+set $ws17   "17"
+set $ws18   "18"
+set $ws19   "19"
+set $ws20   "20"
 
 # Power settings
 set $Locker loginctl lock-session
@@ -53,19 +53,19 @@ mode "$mode_power" {
 }
 
 # Manual managment of secondary display
-set $mode_mon_sec Secondary Screen Output | (hjkl) Move, (d) Duplicate, (x) Off
-mode "$mode_mon_sec" {
-  bindsym l exec --no-startup-id xrandr --output $mon_sec --auto \
-              --right-of $mon_prim, mode "default"
-  bindsym h exec --no-startup-id xrandr --output $mon_sec --auto \
-              --left-of  $mon_prim, mode "default"
-  bindsym k exec --no-startup-id xrandr --output $mon_sec --auto \
-              --above-of $mon_prim, mode "default"
-  bindsym j exec --no-startup-id xrandr --output $mon_sec --auto \
-              --below-of $mon_prim, mode "default"
-  bindsym d exec --no-startup-id xrandr --output $mon_sec --auto \
-              --same-as  $mon_prim, mode "default"
-  bindsym x exec --no-startup-id xrandr --output $mon_sec --auto \
+set $mode_mon2 Secondary Screen Output | (hjkl) Move, (d) Duplicate, (x) Off
+mode "$mode_mon2" {
+  bindsym l exec --no-startup-id xrandr --output $mon2 --auto \
+              --right-of $mon1, mode "default"
+  bindsym h exec --no-startup-id xrandr --output $mon2 --auto \
+              --left-of  $mon1, mode "default"
+  bindsym k exec --no-startup-id xrandr --output $mon2 --auto \
+              --above-of $mon1, mode "default"
+  bindsym j exec --no-startup-id xrandr --output $mon2 --auto \
+              --below-of $mon1, mode "default"
+  bindsym d exec --no-startup-id xrandr --output $mon2 --auto \
+              --same-as  $mon1, mode "default"
+  bindsym x exec --no-startup-id xrandr --output $mon2 --auto \
               --off, mode "default"
   # Back to normal: Enter or Escape
   bindsym Return  mode "default"
@@ -75,10 +75,10 @@ mode "$mode_mon_sec" {
 # Move workspace to different display
 set $mode_move_workspace Move Workspace: hjkl
 mode "$mode_move_workspace" {
-  bindsym l moveworkspace to output right,  mode "default"
-  bindsym h moveworkspace to output left,   mode "default"
-  bindsym k moveworkspace to output above,  mode "default"
-  bindsym j moveworkspace to output below,  mode "default"
+  bindsym l move workspace to output right,  mode "default"
+  bindsym h move workspace to output left,   mode "default"
+  bindsym k move workspace to output above,  mode "default"
+  bindsym j move workspace to output below,  mode "default"
   # Back to normal: Enter or Escape
   bindsym Return  mode "default"
   bindsym Escape  mode "default"
@@ -97,5 +97,3 @@ mode "$mode_resize" {
   bindsym Escape  mode "default"
   bindsym $mod+r  mode "default"
 }
-
-
