--- a/i3/conf.d/window_configs.conf
+++ b/i3/conf.d/window_configs.conf
@@ -28,27 +28,26 @@ for_window [class="(?i)^thunar"] floating enable
 for_window [class="^feh"] floating enable
 #
 # Workspace default screens
-workspace $ws1 output $mon_prim
-workspace $ws2 output $mon_sec
-workspace $ws3 output $mon_sec
-workspace $ws4 output $mon_sec
-workspace $ws5 output $mon_sec
-workspace $ws6 output $mon_sec
-workspace $ws7 output $mon_sec
-workspace $ws8 output $mon_sec
-workspace $ws9 output $mon_sec
-workspace $ws10 output $mon_sec
-workspace $ws11 output $mon_sec
-workspace $ws12 output $mon_sec
-workspace $ws13 output $mon_sec
-workspace $ws14 output $mon_sec
-workspace $ws15 output $mon_sec
-workspace $ws16 output $mon_sec
-workspace $ws17 output $mon_sec
-workspace $ws18 output $mon_sec
-workspace $ws19 output $mon_sec
-workspace $ws20 output $mon_sec
+workspace $ws1 output $mon1
+workspace $ws2 output $mon2
+workspace $ws3 output $mon2
+workspace $ws4 output $mon2
+workspace $ws5 output $mon2
+workspace $ws6 output $mon2
+workspace $ws7 output $mon2
+workspace $ws8 output $mon2
+workspace $ws9 output $mon2
+workspace $ws10 output $mon2
+workspace $ws11 output $mon2
+workspace $ws12 output $mon2
+workspace $ws13 output $mon2
+workspace $ws14 output $mon2
+workspace $ws15 output $mon2
+workspace $ws16 output $mon2
+workspace $ws17 output $mon2
+workspace $ws18 output $mon2
+workspace $ws19 output $mon2
+workspace $ws20 output $mon2
 #
 # Default layout
 workspace_layout default
-
