Reorganize and clean up banners/spacing

--- a/i3/conf.d/monitors.conf
+++ b/i3/conf.d/monitors.conf
@@ -4,6 +4,5 @@
 #
 # Monitor names are pulled from X resources.
 # Fallback values are used if the resource is not set.
-# To change, edit ~/.Xresources.d/<hostname> and run: xrdb -merge ~/.Xresources
-set_from_resource $mon1 i3.mon1 eDP-1
-set_from_resource $mon2 i3.mon2 HDMI-1
+set_from_resource $mon1 display.mon1 DisplayPort-0
+set_from_resource $mon2 display.mon2 DisplayPort-1
