--- a/i3/conf.d/keybinds.conf
+++ b/i3/conf.d/keybinds.conf
@@ -1,7 +1,3 @@
-################################################################################
-# GENERAL_KEYBINDS
-################################################################################
-#
 # Scratchpad controls
 bindsym $mod+Shift+minus  move scratchpad
 bindsym $mod+minus        scratchpad show
@@ -93,7 +89,7 @@ bindsym $mod+Shift+d mode "$mode_mon2"
 # Move workspace to different display
 bindsym $mod+m mode "$mode_move_workspace"
 # Change wallpaper
-bindsym $mod+Shift+t exec --no-startup-id ~/.bin/change_wallpaper.sh
+bindsym $mod+Shift+t exec --no-startup-id ~/.bin/wallpaper
 # Volume control
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute \
   @DEFAULT_SINK@ toggle
@@ -111,6 +107,6 @@ bindsym XF86Calculator exec --no-startup-id qalculate-gtk
 bindsym $mod+Shift+s exec --no-startup-id flameshot gui
 # Toggle dunst notifications
 bindsym $mod+n exec --no-startup-id dunstctl set-paused toggle \
-  && dunst_status.sh
+  && dunst-status
 # File manager
 bindsym $mod+slash exec --no-startup-id thunar
