Add bitwarden scratch pad

--- a/i3/conf.d/keybinds.conf
+++ b/i3/conf.d/keybinds.conf
@@ -1,6 +1,7 @@
 # Scratchpad controls
 bindsym $mod+Shift+minus  move scratchpad
 bindsym $mod+minus        scratchpad show
+bindsym $mod+b [class="(?i)^bitwarden$"] scratchpad show
 # Start a terminal
 bindsym $mod+Return       exec i3-sensible-terminal
 # Kill focused window
