Remove email and add explicit borders

--- a/i3/conf.d/windows.conf
+++ b/i3/conf.d/windows.conf
@@ -10,11 +10,10 @@ for_window [instance="(?i)^spotify$"] move to workspace $ws12
 # Workspace 13: Messaging
 assign [class="(?i)^discord$"] $ws13
 assign [class="(?i)^signal$"] $ws13
-# Workspace 14: Email
-assign [class="(?i)^thunderbird$"] $ws14
-assign [class="(?i)^proton mail bridge"] $ws14
 
 # Window Configurations
+default_border normal 2
+default_floating_border normal 2
 for_window [all] title_window_icon on
 for_window [class="(?i)^proton mail bridge"] floating enable
 for_window [class="(?i)^qalculate-gtk"] floating enable
