--- a/i3/config
+++ b/i3/config
@@ -1,7 +1,7 @@
 # i3 config file (v4)
 # See https://i3wm.org/docs/userguide.html for a complete reference
 include ~/.config/i3/conf.d/monitors.conf
-include ~/.config/i3/conf.d/globals.conf
+include ~/.config/i3/conf.d/settings.conf
 include ~/.config/i3/conf.d/colors.conf
 include ~/.config/i3/conf.d/modes.conf
 include ~/.config/i3/conf.d/windows.conf
