--- a/i3/conf.d/keybinds.conf
+++ b/i3/conf.d/keybinds.conf
@@ -16,6 +16,11 @@ bindsym $mod+Shift+h  move left
 bindsym $mod+Shift+j  move down
 bindsym $mod+Shift+k  move up
 bindsym $mod+Shift+l  move right
+# Resize focused window
+bindsym $mod+Ctrl+h resize shrink width 10 px or 5 ppt
+bindsym $mod+Ctrl+j resize grow height 10 px or 5 ppt
+bindsym $mod+Ctrl+k resize shrink height 10 px or 5 ppt
+bindsym $mod+Ctrl+l resize grow width 10 px or 5 ppt
 # Split in vertical/horizontal orientation
 bindsym $mod+v        split v
 bindsym $mod+Shift+v  split h
@@ -25,12 +30,18 @@ bindsym $mod+f        fullscreen toggle
 bindsym $mod+s        layout stacking
 bindsym $mod+w        layout tabbed
 bindsym $mod+e        layout toggle split
+# Hierarchy traversal
+bindsym $mod+a focus parent
+bindsym $mod+Shift+a focus child
 # toggle tiling / floating
 bindsym $mod+Shift+space  floating toggle
 # change focus between tiling / floating windows
 bindsym $mod+space        focus mode_toggle
-# Resize window
-bindsym $mod+r            mode "$mode_resize"
+# Quick float center
+bindsym $mod+c floating enable, resize set 1200 900, move position center
+# Mark and goto
+bindsym $mod+Shift+m exec i3-input -F 'mark %s' -P 'Mark: '
+bindsym $mod+g exec i3-input -F '[con_mark="%s"] focus' -P 'Go to: '
 # Switch to workspace
 bindsym $mod+1            workspace $ws1
 bindsym $mod+2            workspace $ws2
@@ -52,6 +63,7 @@ bindsym $mod+Ctrl+7       workspace $ws17
 bindsym $mod+Ctrl+8       workspace $ws18
 bindsym $mod+Ctrl+9       workspace $ws19
 bindsym $mod+Ctrl+0       workspace $ws20
+bindsym $mod+Tab          workspace back_and_forth
 # Move focused container to workspace
 bindsym $mod+Shift+1      move container to workspace $ws1
 bindsym $mod+Shift+2      move container to workspace $ws2
@@ -77,10 +89,6 @@ bindsym $mod+Shift+Ctrl+0 move container to workspace $ws20
 bindsym $mod+Shift+c  reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r  restart
-# exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e  exec "i3-nagbar -t warning -m 'You pressed the exit \
-shortcut. Do you really want to exit i3? This will end your X session.' -b \
-'Yes, exit i3' 'i3-msg exit'"
 # Power settings
 bindsym $mod+x mode "$mode_power"
 # start dmenu (a program launcher)
@@ -102,12 +110,18 @@ bindsym Shift+XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume \
   @DEFAULT_SINK@ -10%
 bindsym Shift+XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume \
   @DEFAULT_SINK@ +10%
+# Media control
+bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause
+bindsym XF86AudioNext exec --no-startup-id playerctl next
+bindsym XF86AudioPrev exec --no-startup-id playerctl previous
+# Brightness control
+bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
+bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
 # Calculator
 bindsym XF86Calculator exec --no-startup-id qalculate-gtk
 # Screenshot
 bindsym $mod+Shift+s exec --no-startup-id flameshot gui
 # Toggle dunst notifications
-bindsym $mod+n exec --no-startup-id dunstctl set-paused toggle \
-  && dunst-status
+bindsym $mod+n exec --no-startup-id dunstctl set-paused toggle && dunst-status
 # File manager
 bindsym $mod+slash exec --no-startup-id thunar
