--- a/i3/conf.d/keybinds.conf
+++ b/i3/conf.d/keybinds.conf
@@ -1,48 +1,17 @@
-# Scratchpad controls
-bindsym $mod+Shift+minus  move scratchpad
-bindsym $mod+minus        scratchpad show
-bindsym $mod+b [class="(?i)^bitwarden$"] scratchpad show
-# Start a terminal
-bindsym $mod+Return       exec i3-sensible-terminal
-# Kill focused window
-bindsym $mod+Shift+q      kill
-# Change focused window
+# =============================================================================
+# Navigation
+# =============================================================================
+
+# Focus
 bindsym $mod+h  focus left
 bindsym $mod+j  focus down
 bindsym $mod+k  focus up
 bindsym $mod+l  focus right
-# Move focused window
-bindsym $mod+Shift+h  move left
-bindsym $mod+Shift+j  move down
-bindsym $mod+Shift+k  move up
-bindsym $mod+Shift+l  move right
-# Resize focused window
-bindsym $mod+Ctrl+h resize shrink width 10 px or 5 ppt
-bindsym $mod+Ctrl+j resize grow height 10 px or 5 ppt
-bindsym $mod+Ctrl+k resize shrink height 10 px or 5 ppt
-bindsym $mod+Ctrl+l resize grow width 10 px or 5 ppt
-# Split in vertical/horizontal orientation
-bindsym $mod+v        split v
-bindsym $mod+Shift+v  split h
-# Enter fullscreen mode for the focused container
-bindsym $mod+f        fullscreen toggle
-# change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s        layout stacking
-bindsym $mod+w        layout tabbed
-bindsym $mod+e        layout toggle split
-# Hierarchy traversal
-bindsym $mod+a focus parent
-bindsym $mod+Shift+a focus child
-# toggle tiling / floating
-bindsym $mod+Shift+space  floating toggle
-# change focus between tiling / floating windows
-bindsym $mod+space        focus mode_toggle
-# Quick float center
-bindsym $mod+c floating enable, resize set 1200 900, move position center
-# Mark and goto
-bindsym $mod+Shift+m exec i3-input -F 'mark %s' -P 'Mark: '
-bindsym $mod+g exec i3-input -F '[con_mark="%s"] focus' -P 'Go to: '
-# Switch to workspace
+bindsym $mod+a  focus parent
+bindsym $mod+Shift+a  focus child
+bindsym $mod+space  focus mode_toggle
+
+# Workspaces
 bindsym $mod+1            workspace $ws1
 bindsym $mod+2            workspace $ws2
 bindsym $mod+3            workspace $ws3
@@ -64,7 +33,26 @@ bindsym $mod+Ctrl+8       workspace $ws18
 bindsym $mod+Ctrl+9       workspace $ws19
 bindsym $mod+Ctrl+0       workspace $ws20
 bindsym $mod+Tab          workspace back_and_forth
-# Move focused container to workspace
+
+# Marks
+bindsym $mod+Shift+m  exec i3-input -F 'mark %s' -P 'Mark: '
+bindsym $mod+g        exec i3-input -F '[con_mark="%s"] focus' -P 'Go to: '
+
+# Scratchpad
+bindsym $mod+minus        scratchpad show
+bindsym $mod+Shift+minus  move scratchpad
+bindsym $mod+b            [class="(?i)^bitwarden$"] scratchpad show
+
+# =============================================================================
+# Window management
+# =============================================================================
+
+# Move
+bindsym $mod+Shift+h  move left
+bindsym $mod+Shift+j  move down
+bindsym $mod+Shift+k  move up
+bindsym $mod+Shift+l  move right
+
 bindsym $mod+Shift+1      move container to workspace $ws1
 bindsym $mod+Shift+2      move container to workspace $ws2
 bindsym $mod+Shift+3      move container to workspace $ws3
@@ -85,21 +73,41 @@ bindsym $mod+Shift+Ctrl+7 move container to workspace $ws17
 bindsym $mod+Shift+Ctrl+8 move container to workspace $ws18
 bindsym $mod+Shift+Ctrl+9 move container to workspace $ws19
 bindsym $mod+Shift+Ctrl+0 move container to workspace $ws20
-# reload the configuration file
-bindsym $mod+Shift+c  reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r  restart
-# Power settings
-bindsym $mod+x mode "$mode_power"
-# start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
-# Manual managment of external displays
-bindsym $mod+Shift+d mode "$mode_mon2"
-# Move workspace to different display
-bindsym $mod+m mode "$mode_move_workspace"
-# Change wallpaper
-bindsym $mod+Shift+t exec --no-startup-id ~/.bin/wallpaper
-# Volume control
+
+# Resize
+bindsym $mod+Ctrl+h  resize shrink width 10 px or 5 ppt
+bindsym $mod+Ctrl+j  resize grow height 10 px or 5 ppt
+bindsym $mod+Ctrl+k  resize shrink height 10 px or 5 ppt
+bindsym $mod+Ctrl+l  resize grow width 10 px or 5 ppt
+
+# Layout
+bindsym $mod+v        split v
+bindsym $mod+Shift+v  split h
+bindsym $mod+f        fullscreen toggle
+bindsym $mod+s        layout stacking
+bindsym $mod+w        layout tabbed
+bindsym $mod+e        layout toggle split
+
+# Floating
+bindsym $mod+Shift+space  floating toggle
+bindsym $mod+c            floating enable, resize set 1200 900, move position center
+
+# Close
+bindsym $mod+Shift+q  kill
+
+# =============================================================================
+# Launchers
+# =============================================================================
+
+bindsym $mod+Return  exec i3-sensible-terminal
+bindsym $mod+d       exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+slash   exec --no-startup-id thunar
+
+# =============================================================================
+# Media & hardware
+# =============================================================================
+
+# Volume
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute \
   @DEFAULT_SINK@ toggle
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume \
@@ -110,18 +118,37 @@ bindsym Shift+XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume \
   @DEFAULT_SINK@ -10%
 bindsym Shift+XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume \
   @DEFAULT_SINK@ +10%
-# Media control
-bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause
-bindsym XF86AudioNext exec --no-startup-id playerctl next
-bindsym XF86AudioPrev exec --no-startup-id playerctl previous
-# Brightness control
-bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
-bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
+
+# Playback
+bindsym XF86AudioPlay  exec --no-startup-id playerctl play-pause
+bindsym XF86AudioNext  exec --no-startup-id playerctl next
+bindsym XF86AudioPrev  exec --no-startup-id playerctl previous
+
+# Brightness
+bindsym XF86MonBrightnessUp    exec --no-startup-id brightnessctl set +5%
+bindsym XF86MonBrightnessDown  exec --no-startup-id brightnessctl set 5%-
+
 # Calculator
-bindsym XF86Calculator exec --no-startup-id qalculate-gtk
+bindsym XF86Calculator  exec --no-startup-id qalculate-gtk
+
 # Screenshot
-bindsym $mod+Shift+s exec --no-startup-id flameshot gui
-# Toggle dunst notifications
-bindsym $mod+n exec --no-startup-id dunstctl set-paused toggle && dunst-status
-# File manager
-bindsym $mod+slash exec --no-startup-id thunar
+bindsym $mod+Shift+s  exec --no-startup-id flameshot gui
+
+# =============================================================================
+# System
+# =============================================================================
+
+# Notifications
+bindsym $mod+n  exec --no-startup-id dunstctl set-paused toggle && dunst-status
+
+# Wallpaper
+bindsym $mod+Shift+t  exec --no-startup-id ~/.bin/wallpaper
+
+# Monitors
+bindsym $mod+Shift+d  mode "$mode_mon2"
+bindsym $mod+m        mode "$mode_move_workspace"
+
+# i3 management
+bindsym $mod+Shift+c  reload
+bindsym $mod+Shift+r  restart
+bindsym $mod+x        mode "$mode_power"
