--- a/i3/conf.d/bar.conf
+++ b/i3/conf.d/bar.conf
@@ -1,6 +1,7 @@
 # Start i3bar to display a workspace/status bar
 bar {
   status_command          i3status
+  font                    pango:Terminus, Symbols Nerd Font 10
   strip_workspace_numbers no
   tray_output             primary
 }
