Modify keybinds to use vol-control scripts

--- a/i3/conf.d/keybinds.conf
+++ b/i3/conf.d/keybinds.conf
@@ -108,19 +108,13 @@ bindsym $mod+slash   exec --no-startup-id thunar
 # =============================================================================
 
 # Volume
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute \
-  @DEFAULT_SINK@ toggle
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume \
-  @DEFAULT_SINK@ -1%
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume \
-  @DEFAULT_SINK@ +1%
-bindsym Shift+XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume \
-  @DEFAULT_SINK@ -10%
-bindsym Shift+XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume \
-  @DEFAULT_SINK@ +10%
+bindsym XF86AudioMute exec --no-startup-id vol-mute
+bindsym XF86AudioLowerVolume exec --no-startup-id vol-down 5
+bindsym XF86AudioRaiseVolume exec --no-startup-id vol-up 5
 
 # Playback
 bindsym XF86AudioPlay  exec --no-startup-id playerctl play-pause
+bindsym XF86AudioPause exec --no-startup-id playerctl play-pause
 bindsym XF86AudioNext  exec --no-startup-id playerctl next
 bindsym XF86AudioPrev  exec --no-startup-id playerctl previous
 
