--- a/i3/conf.d/keybinds.conf
+++ b/i3/conf.d/keybinds.conf
@@ -108,9 +108,9 @@ bindsym $mod+slash   exec --no-startup-id thunar
 # =============================================================================
 
 # Volume
-bindsym XF86AudioMute exec --no-startup-id vol-mute
-bindsym XF86AudioLowerVolume exec --no-startup-id vol-down 5
-bindsym XF86AudioRaiseVolume exec --no-startup-id vol-up 5
+bindsym XF86AudioMute exec --no-startup-id vol mute
+bindsym XF86AudioLowerVolume exec --no-startup-id vol down 5
+bindsym XF86AudioRaiseVolume exec --no-startup-id vol up 5
 
 # Playback
 bindsym XF86AudioPlay  exec --no-startup-id playerctl play-pause
