Reorder float alphabetically; add pavucontrol

--- a/i3/conf.d/windows.conf
+++ b/i3/conf.d/windows.conf
@@ -14,13 +14,14 @@ assign [class="(?i)^signal$"] $ws13
 default_border normal 2
 default_floating_border normal 2
 for_window [all] title_window_icon on
+for_window [class="(?i)^bitwarden$"] move scratchpad
+for_window [class="(?i)^feh"] floating enable
+for_window [class="(?i)^pavucontrol"] floating enable
 for_window [class="(?i)^proton mail bridge"] floating enable
 for_window [class="(?i)^qalculate-gtk"] floating enable
 for_window [class="(?i)^steam"] floating enable
 for_window [class="(?i)^steam" title="(?i)^steam$"] floating disable
 for_window [class="(?i)^thunar"] floating enable
-for_window [class="(?i)^feh"] floating enable
-for_window [class="(?i)^bitwarden$"] move scratchpad
 
 # Workspace default screens
 workspace $ws1 output $mon1
