Switch to i3blocks; add volume block

--- a/i3/conf.d/bar.conf
+++ b/i3/conf.d/bar.conf
@@ -1,6 +1,6 @@
 # Start i3bar to display a workspace/status bar
 bar {
-  status_command          i3status
+  status_command          i3blocks
   font                    pango:Terminus, Symbols Nerd Font 10
   strip_workspace_numbers no
   tray_output             primary
