Add dunst status block

--- a/i3/conf.d/keybinds.conf
+++ b/i3/conf.d/keybinds.conf
@@ -133,7 +133,7 @@ bindsym $mod+Shift+s  exec --no-startup-id flameshot gui
 # =============================================================================
 
 # Notifications
-bindsym $mod+n  exec --no-startup-id dunstctl set-paused toggle && dunst-status
+bindsym $mod+n  exec --no-startup-id dunst-toggle
 
 # Wallpaper
 bindsym $mod+Shift+t  exec --no-startup-id ~/.bin/wallpaper
