Rename dunst stuff to notif
I'd like it to be a bit less coupled to the name dunst. The inner
workings still call dunst, but now only the inner workings of the script
need changed if the notification daemon ever changes.

--- a/i3blocks/config
+++ b/i3blocks/config
@@ -16,9 +16,9 @@ command=~/.config/i3blocks/scripts/volume
 interval=1
 signal=1
 
-[dunst]
+[notif]
 # Left click: toggle notifications
-command=~/.config/i3blocks/scripts/dunst
+command=~/.config/i3blocks/scripts/notif
 interval=1
 signal=2
 
