--- a/i3/conf.d/keybinds.conf
+++ b/i3/conf.d/keybinds.conf
@@ -42,6 +42,7 @@ bindsym $mod+g        exec i3-input -F '[con_mark="%s"] focus' -P 'Go to: '
 bindsym $mod+minus        scratchpad show
 bindsym $mod+Shift+minus  move scratchpad
 bindsym $mod+b            [class="(?i)^bitwarden$"] scratchpad show
+bindsym $mod+t            [class="(?i)^stalonetray"] scratchpad show
 
 # =============================================================================
 # Window management
