--- a/i3/conf.d/windows.conf
+++ b/i3/conf.d/windows.conf
@@ -19,6 +19,8 @@ for_window [class="(?i)^feh"] floating enable
 for_window [class="(?i)^pavucontrol"] floating enable
 for_window [class="(?i)^proton mail bridge"] floating enable
 for_window [class="(?i)^qalculate-gtk"] floating enable
+for_window [class="(?i)^stalonetray"] floating enable, move position center, \
+  sticky enable, move scratchpad
 for_window [class="(?i)^steam"] floating enable
 for_window [class="(?i)^steam" title="(?i)^steam$"] floating disable
 for_window [class="(?i)^thunar"] floating enable
