--- a/i3/conf.d/bar.conf
+++ b/i3/conf.d/bar.conf
@@ -3,5 +3,5 @@ bar {
   status_command          i3blocks
   font                    pango:Terminus, Symbols Nerd Font 10
   strip_workspace_numbers no
-  tray_output             primary
+  tray_output             none
 }
