Replace notify with show_popup

--- a/i3/conf.d/windows.conf
+++ b/i3/conf.d/windows.conf
@@ -16,11 +16,13 @@ default_floating_border normal 2
 for_window [all] title_window_icon on
 for_window [class="(?i)^bitwarden$"] move scratchpad
 for_window [class="(?i)^feh"] floating enable
+for_window [title="(?i)^i3blocks_popup"] floating enable, \
+  resize set 600 400, sticky enabled, move position center
 for_window [class="(?i)^pavucontrol"] floating enable
 for_window [class="(?i)^proton mail bridge"] floating enable
 for_window [class="(?i)^qalculate-gtk"] floating enable
-for_window [class="(?i)^stalonetray"] floating enable, move position center, \
-  sticky enable, move scratchpad
+for_window [class="(?i)^stalonetray"] floating enable, \
+  move position center, sticky enable, move scratchpad
 for_window [class="(?i)^steam"] floating enable
 for_window [class="(?i)^steam" title="(?i)^steam$"] floating disable
 for_window [class="(?i)^thunar"] floating enable
